Variant and and variant attribute support
Add support for variant datatype and primitives DataToVariant and
VariantToData.
Add Support Get/Set Variant Attributes

--- a/Vireo_VS/VireoCommandLine.vcxproj.filters
+++ b/Vireo_VS/VireoCommandLine.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClCompile Include="..\source\core\JavaScriptRef.cpp">
       <Filter>VireoSource\Core</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\core\Variants.cpp">
+      <Filter>VireoSource\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\source\include\ConversionTable.def">
