--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,7 +32,7 @@ before_build:
 build:
   project: Vireo_VS/VireoCommandLine.sln
 after_build:
-  - cmd /c make-it\appveyor-support\setup-env-and-make-vjs.bat
+  - make vjs
   - ps: $env:package_version = (Get-Content -Raw -Path package.json | ConvertFrom-Json).version
   - ps: nuget pack VireoSDK.nuspec -properties version="$env:package_version"
 test_script:
