--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,6 +40,7 @@ test_script:
   - make testnative
   - make testhttpbin
   - npm run test -- --browsers FirefoxHeadless
+  - npm run test-min -- --browsers FirefoxHeadless
 
 # Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
 after_test:
