Add option to makefile to enable ASAN easily

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -96,6 +96,12 @@ else
         CC=clang++
         LDFLAGS+= -dead_strip
         CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fno-rtti -fno-exceptions -std=c++11
+
+        ifdef ASAN
+            LDFLAGS += -fsanitize=address
+            CFLAGS += -fsanitize=address
+        endif
+
         PROGRAM_DIR=/Applications/Vireo
     endif
 endif
