Switch to stock xenial gcc 5.4.0

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -72,10 +72,7 @@ else
                 # g++ requires c++11 for std::complex asin/acos/atan support
                 # Prefer clang++ if installed which does not have this requirement
                 # (but only in standard path, becasue we don't want emscripten's clang++)
-                # or g++-4.9 (Travis Precise environment default g++ doesn't have
-		# std=c++11 option, but g++-4.9 is installed in Travis as an option and also
-		# needed to build emscripten, so use that if in path).
-                CC=$(shell which /usr/bin/clang++ || which g++-4.9 || which g++)
+                CC=$(shell which /usr/bin/clang++ || which g++)
                 CFLAGS+= -std=c++11 -pthread $(CCOPT) $(TARGETARCH) -fdata-sections -ffunction-sections
                 LDFLAGS+= -s -Wl,--gc-sections
                 # LDSTATIC+= -static
