--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-4.9
     - doxygen
 cache:
   directories:
@@ -26,8 +25,9 @@ install:
 - npm install
 - pip install --user tox
 - nohup npm run httpbin &
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
 - gcc -v
+- echo $CXX
+- echo $CC
 - git clone https://github.com/juj/emsdk.git
 - (cd emsdk && git checkout 9538381d56272818cba77a808ba46fdac6c961c8)
 - emsdk/emsdk install sdk-1.38.29-64bit
