--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
-dist: trusty
-sudo: false
+dist: xenial
 branches:
   except:
     - gh-pages
 addons:
   firefox: latest
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
     packages:
-    - g++-4.9
     - doxygen
 cache:
   directories:
@@ -27,18 +23,13 @@ install:
 - npm install
 - pip install --user tox
 - nohup npm run httpbin &
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
 - gcc -v
-- mkdir -p emsdk-tools
-- cp make-it/travis-support/libstdc++6_5.1.0-0ubuntu11~10.04.2_amd64.deb emsdk-tools/
-- (cd emsdk-tools && ar xv libstdc++6_5.1.0-0ubuntu11~10.04.2_amd64.deb)
-- tar -xzf emsdk-tools/data.tar.gz -C emsdk-tools
 - git clone https://github.com/juj/emsdk.git
-- (cd emsdk && git checkout 0d8576c0e8f5ee09a36120b9d44184b5da2f2e7a)
-- emsdk/emsdk install sdk-1.38.12-64bit > emsdk-tools/emsdk_install_log.txt
-- emsdk/emsdk activate sdk-1.38.12-64bit
+- (cd emsdk && git checkout 9538381d56272818cba77a808ba46fdac6c961c8)
+- emsdk/emsdk install sdk-1.38.30-64bit
+- emsdk/emsdk activate sdk-1.38.30-64bit
 - cat ~/.emscripten
-- (source make-it/travis-support/setup-env.sh && emcc -v)
+- (source emsdk/emsdk_env.sh && emcc -v)
 before_script:
 - while ! nc -q 1 127.0.0.1 64526 </dev/null; do sleep 2; done
 - curl http://127.0.0.1:64526/get?show_env=1
@@ -46,10 +37,10 @@ before_script:
 - npm run lint
 - make native
 - make unittest
-- (source make-it/travis-support/setup-env.sh && make vjs)
-- (source make-it/travis-support/setup-env.sh && make vjs BUILD=debug)
-- (source make-it/travis-support/setup-env.sh && make vjs BUILD=profile)
-- (source make-it/travis-support/setup-env.sh && make vjs BUILD=release TARGET=asmjs-unknown-emscripten)
+- (source emsdk/emsdk_env.sh && make vjs)
+- (source emsdk/emsdk_env.sh && make vjs BUILD=debug)
+- (source emsdk/emsdk_env.sh && make vjs BUILD=profile)
+- (source emsdk/emsdk_env.sh && make vjs BUILD=release TARGET=asmjs-unknown-emscripten)
 - tar -tf $(npm pack)
 script:
 - make testjs
@@ -57,8 +48,6 @@ script:
 - make testhttpbin
 - npm run test-min
 - npm run test-asmjs
-after_failure:
-- cat emsdk-tools/emsdk_install_log.txt
 before_deploy:
 - npm run doxygen
 - export ESH_64_RELEASE="esh_"$TRAVIS_TAG"_x86_64-unknown-linux-gnu_release.zip"
