Opaque JS Reference type (#580)
* Allowing JSRefnum types to be allowed types on JSLI param/return values

Adding back visitJSObjectRefnum to:
- createJavaScriptInvokeParameterValueVisitor
- createJavaScriptInvokeReturnValueVisitor
so that it's not just internal-only (reverting part of  commit b19704a64cc14ebc74fdcbd9a6e162869b451b21)

* Static vs Dynamic reference distinction to JSRefnum

Adding Static vs Dynamic reference distinction to JSRefnum.
- Static reference (ie, Static control reference) shares cookie for the same jsValue.
- Dynamic reference (ie, JS opaque reference from JSLI) always creates a new cookie even for the same jsValue. This is so that when we close one reference, we don't invalidate another reference even if they are referring to the same JS object underneath it.

* Fixing failing intermittent test

Fixing the failing test - updating the test to deal with static vs. dynamic references.
Fixing the intermittency - test was marked async when it shouldn't have been.

* Adding new JavaScriptStaticRefNum and JavaScriptDynamicRefNum types to Vireo

Creating new JavaScriptStaticRefNum and JavaScriptDynamicRefNum types to Vireo instead of single JavaScriptRefNum type that had boolean parameter to distinguish between the two.

* Adding a new exported method TypeRef_IsJavaScriptStaticRefNum() instead.

Adding a new exported method TypeRef_IsJavaScriptStaticRefNum() to vireo and removing the need for 2 public eggshell methods: writeJavaScriptStaticRefNum() and writeJavaScriptDynamicRefNum(), and cleaning up tests.

* minor: re-trigger AppVeyor

Adding minor comment to get AppVeyor tests to re-trigger.

* Only exposing explicit IsJavaScriptStaticRefNum and IsJavaScriptDynamicRefNum checks

Only exposing explicit TypeRef_IsJavaScriptStaticRefNum and TypeRef_IsJavaScriptDynamicRefNum checks and removing TypeRef_IsJavaScriptRefNum since it does not map to any type in vireo.
But keeping the Module.typeHelpers.isJSObjectRefnum f

--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -23,7 +23,8 @@
     <ClCompile Include="..\source\core\Events.cpp" />
     <ClCompile Include="..\source\core\ExecutionContext.cpp" />
     <ClCompile Include="..\source\core\GenericFunctions.cpp" />
-    <ClCompile Include="..\source\core\JavaScriptRef.cpp" />
+    <ClCompile Include="..\source\core\JavaScriptStaticRef.cpp" />
+    <ClCompile Include="..\source\core\JavaScriptDynamicRef.cpp" />
     <ClCompile Include="..\source\core\MatchPat.cpp" />
     <ClCompile Include="..\source\core\Math.cpp" />
     <ClCompile Include="..\source\core\NumericString.cpp" />
