--- a/Vireo_VS/VireoCommandLine.vcxproj
+++ b/Vireo_VS/VireoCommandLine.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="..\source\core\Array.cpp" />
     <ClCompile Include="..\source\core\Assert.cpp" />
     <ClCompile Include="..\source\core\CEntryPoints.cpp" />
+    <ClCompile Include="..\source\core\CloseReference.cpp" />
     <ClCompile Include="..\source\core\ControlRef.cpp" />
     <ClCompile Include="..\source\core\DataQueue.cpp" />
     <ClCompile Include="..\source\core\Date.cpp" />
