--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -14,7 +14,7 @@ OUTPUT_TEST_EXE=$(OUTPUT_DIR)/esh-test
 COMMANDLINE = main.cpp
 CORE = Array.cpp Assert.cpp CEntryPoints.cpp CloseReference.cpp ControlRef.cpp Date.cpp DualTypeEqual.cpp DualTypeOperation.cpp DualTypeConversion.cpp DualTypeVisitor.cpp EventLog.cpp Events.cpp ExecutionContext.cpp GenericFunctions.cpp JavaScriptStaticRef.cpp JavaScriptDynamicRef.cpp MatchPat.cpp Math.cpp NumericString.cpp Platform.cpp Queue.cpp RefNum.cpp String.cpp StringUtilities.cpp Synchronization.cpp TDCodecLVFlat.cpp TDCodecVia.cpp Thread.cpp TimeFunctions.cpp Timestamp.cpp TypeAndDataManager.cpp TypeAndDataReflection.cpp TypeDefiner.cpp TypeTemplates.cpp UnitTest.cpp  Variants.cpp VirtualInstrument.cpp Waveform.cpp
 UNITTEST = RefNumTest.cpp
-IO = FileIO.cpp DebugGPIO.cpp HttpClient.cpp JavaScriptInvoke.cpp PropertyNode.cpp
+IO = FileIO.cpp DebugGPIO.cpp HttpClient.cpp JavaScriptInvoke.cpp
 
 OBJS = $(COMMANDLINEOBJS) $(COREOBJS) $(IOOBJS)
 COMMANDLINEOBJS = $(COMMANDLINE:%.cpp=$(OBJDIR)/%.o)
