--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -39,7 +39,7 @@ test_script:
   - make testjs
   - make testnative
   - make testhttpbin
-  - npm run test-min -- --browsers FirefoxHeadless
+  - npm run test-min -- --browsers FirefoxHeadless --skip-tags FailsFirefox
 
 # Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
 after_test:
