--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,9 +17,9 @@ install:
   - pip install tox
   - ps: Start-Process npm "run httpbin" -PassThru
   - git clone https://github.com/juj/emsdk.git
-  - cd emsdk && git checkout 1b1f08f356d3f10d91e50c09dda6d44372ca908c && cd ..
-  - ps: emsdk\emsdk install sdk-1.38.30-64bit
-  - ps: emsdk\emsdk activate sdk-1.38.30-64bit
+  - cd emsdk && git checkout 369013943283939412fb2807bb0d2ded8ebd5a9e && cd ..
+  - ps: emsdk\emsdk install 1.39.5-fastcomp
+  - ps: emsdk\emsdk activate 1.39.5-fastcomp
 platform:
   - Win32
 configuration:
