--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
 - nohup npm run httpbin &
 - gcc -v
 - git clone https://github.com/juj/emsdk.git
-- (cd emsdk && git checkout 1b1f08f356d3f10d91e50c09dda6d44372ca908c)
-- emsdk/emsdk install sdk-1.38.30-64bit
-- emsdk/emsdk activate sdk-1.38.30-64bit
+- (cd emsdk && git checkout 369013943283939412fb2807bb0d2ded8ebd5a9e)
+- emsdk/emsdk install 1.39.5-fastcomp
+- emsdk/emsdk activate 1.39.5-fastcomp
 - cat ~/.emscripten
 - (source emsdk/emsdk_env.sh && emcc -v)
 before_script:
