--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ addons:
     packages:
     - doxygen
 before_install:
+- nvm ls
+- nvm install 10
+- nvm use 10
 - export TZ=CST6CDT
 - npm install npm@latest -g
 - node -v
