--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,7 +42,7 @@ test_script:
   - make testjs
   - make testnative
   - make testhttpbin
-  - npm run test-min
+  - npm run test-min -- --browsers FirefoxHeadless
 
 # Using the same naming convention as rust https://forge.rust-lang.org/platform-support.html
 after_test:
