GitHub Actions install emsdk toolchain

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,19 @@ jobs:
   wasm:
     runs-on: ubuntu-16.04
     steps:
-    - name: wasm hello
-      run: |
-        echo wasmhello
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm ci
+    - run: |
+        git clone https://github.com/juj/emsdk.git
+        cd emsdk
+        git checkout 369013943283939412fb2807bb0d2ded8ebd5a9e
+        emsdk install 1.39.5-fastcomp
+        emsdk activate 1.39.5-fastcomp
+        emcc -v
 
   windows:
     runs-on: windows-2019
