--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,21 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
+
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.5'
+    - run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - run: nohup python -m httpbin.core --port 64526 --host 0.0.0.0 &
+
     - uses: actions/setup-node@v1
       with:
         node-version: '12'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
+
     - run: |
         git clone https://github.com/juj/emsdk.git
         cd emsdk
@@ -22,6 +32,7 @@ jobs:
     - run: |
         emsdk/emsdk install 1.39.5-fastcomp
         emsdk/emsdk activate 1.39.5-fastcomp
+
     - run: . emsdk/emsdk_env.sh && emcc -v
     - run: . emsdk/emsdk_env.sh && make vjs
     - run: . emsdk/emsdk_env.sh && make vjs BUILD=debug
@@ -32,9 +43,11 @@ jobs:
       with:
         name: npm package
         path: ./vireo-*.tgz
+
     - run: make testjs
     - run: npm run test-min
     - run: npm run test-asmjs
+
   windows:
     runs-on: windows-2019
     steps:
