--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,22 @@ on:
     - 'v*'
 
 jobs:
+  lint:
+    runs-on: ubuntu-16.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.5'
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm ci
+    - run: make lint
+    - run: npm run lint
+    - run: npm run doxygen
+
   web:
     runs-on: ubuntu-16.04
     steps:
