--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,18 @@ jobs:
 
     - run: sudo apt-get install doxygen
     - run: npm run doxygen
+    - uses: actions/upload-artifact@v1
+      with:
+        name: gh-pages build
+        path: ./gh-pages/
+
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: '2.6'
+    - # if: startsWith(github.ref, 'refs/tags/v')
+      run: |
+        gem install dpl
+        dpl --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{secrets.GITHUBPAGESDEPLOYTOKEN}}
 
   web:
     runs-on: ubuntu-16.04
