--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,6 +103,7 @@ jobs:
   linux:
     runs-on: ubuntu-16.04
     steps:
+    - uses: actions/checkout@v2
     - run: make native
     - run: make unittest
     - run: make testnative
