--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   lint_and_docs:
     runs-on: ubuntu-16.04
+    if: false
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -39,6 +40,7 @@ jobs:
 
   web:
     runs-on: ubuntu-16.04
+    if: false
     steps:
     - uses: actions/checkout@v2
 
@@ -75,18 +77,18 @@ jobs:
         name: npm package
         path: ./vireo-*.tgz
 
-    # - run: make testjs
-    #   env:
-    #     TZ: CST6CDT
-    # - run: make testhttpbin
-    #   env:
-    #     TZ: CST6CDT
-    # - run: npm run test-min
-    #   env:
-    #     TZ: CST6CDT
-    # - run: npm run test-asmjs
-    #   env:
-    #     TZ: CST6CDT
+    - run: make testjs
+      env:
+        TZ: CST6CDT
+    - run: make testhttpbin
+      env:
+        TZ: CST6CDT
+    - run: npm run test-min
+      env:
+        TZ: CST6CDT
+    - run: npm run test-asmjs
+      env:
+        TZ: CST6CDT
 
     - if: startsWith(github.ref, 'refs/tags/v')
       run: npm publish
@@ -111,5 +113,9 @@ jobs:
     - run: npm ci
     - run: make native
     - run: make unittest
+      env:
+          TZ: CST6CDT
     - run: make testnative
+      env:
+          TZ: CST6CDT
     # TODO github release
