--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,6 @@ jobs:
     # - run: make testnative
     #   env:
     #       TZ: CST6CDT
-    - run: echo $ESH_64_RELEASE
-      env:
-        ESH_64_RELEASE: ${{node -p "require('./package.json').version"}}
+    - run: |
+        export ESH_64_RELEASE="esh_"$(node -p "require('./package.json').version")"_x86_64-unknown-linux-gnu_release.zip"
+        echo $ESH_64_RELEASE
