--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,11 @@ jobs:
     # - run: make testnative
     #   env:
     #       TZ: CST6CDT
-    - run: |
+    - name: build archive
+      run: |
         export ESH_64_RELEASE="esh_"$(node -p "require('./package.json').version")"_x86_64-unknown-linux-gnu_release.zip"
         echo $ESH_64_RELEASE
+    - uses: actions/upload-artifact@v2
+      with:
+        name: esh release
+        path: ./esh_*.zip
