GitHub Action test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         name: gh-pages build
         path: ./gh-pages/
+        if-no-files-found: error
 
     - uses: actions/setup-ruby@v1
       with:
@@ -76,6 +77,7 @@ jobs:
       with:
         name: npm package
         path: ./vireo-*.tgz
+        if-no-files-found: error
 
     - run: make testjs
       env:
@@ -122,9 +124,10 @@ jobs:
     - name: build archive
       run: |
         export ESH_64_RELEASE="esh_"$(node -p "require('./package.json').version")"_x86_64-unknown-linux-gnu_release.zip"
-        echo $ESH_64_RELEASE
+        zip -j $ESH_64_RELEASE dist/esh README.md LICENSE.txt
     - run: ls -al
     - uses: actions/upload-artifact@v2
       with:
         name: esh release
         path: ./esh_*.zip
+        if-no-files-found: error
