--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,12 +115,12 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: make native
-    # - run: make unittest
-    #   env:
-    #       TZ: CST6CDT
-    # - run: make testnative
-    #   env:
-    #       TZ: CST6CDT
+    - run: make unittest
+      env:
+          TZ: CST6CDT
+    - run: make testnative
+      env:
+          TZ: CST6CDT
     - name: build archive
       run: |
         export ESH_64_RELEASE="esh_"$(node -p "require('./package.json').version")"_x86_64-unknown-linux-gnu_release.zip"
