--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,7 @@ jobs:
 
   linux:
     runs-on: ubuntu-16.04
+    if: false
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
