--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
       with:
         ruby-version: '2.6'
     - if: startsWith(github.ref, 'refs/tags/v')
-      run: |
-        gem install dpl
-        dpl --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{secrets.GITHUBPAGESDEPLOYTOKEN}}
+      run: gem install dpl
+    - if: startsWith(github.ref, 'refs/tags/v')
+      run: dpl --provider=pages --repo=ni/VireoSDK --local_dir=gh-pages --skip_cleanup --name=rajsite --email=rajsite@users.noreply.github.com --github-token=${{secrets.GITHUBPAGESDEPLOYTOKEN}}
 
   setup:
     runs-on: ubuntu-16.04
